# tas

./: .gitignore  .start_all.launch.swp  INSTALL.md  README.md  localcostrec1  start_all.launch
Arduino/MotorOdometry/: MotorOdometry.ino
Arduino/MotorTest/: .cproject  .project  MotorTest.ino
Arduino/ros_lib/px_comm/: CameraInfo.h  Mavlink.h  OpticalFlow.h  OpticalFlowRad.h  SetCameraInfo.h
Arduino/ros_lib/tas_odometry/: Encoder.h
Matlab Code Konrad/: Readme.md  alternatePath.m  calcCost.m  createBox.m  createCalcPoints.m  pathcreator.m  readLocalCostmap.m
MotorOdometry/: .cproject  .project  MotorOdometry.ino
findpark/: CMakeLists.txt  package.xml  readme  readme.md
findpark/launch/: findpark.launch
findpark/src/: findpark.cpp  findpark.h  main_old.cpp
joy_control/: CMakeLists.txt  package.xml
joy_control/src/: main.cpp
joy_control/src/joy_lib/: joy_lib.cpp  joy_lib.h
ownLocalPlanner/: CMakeLists.txt  package.xml
ownLocalPlanner/src/: main.cpp
ownLocalPlanner/src/plannerLib/: plannerlib.cpp  plannerlib.cpp.autosave  plannerlib.h
ownlocalplanner/: CMakeLists.txt  package.xml
ownlocalplanner/src/: main.cpp
ownlocalplanner/src/plannerLib/: plannerlib.cpp  plannerlib.h
parking/: CMakeLists.txt  package.xml  readme.md
parking/src/: main.cpp  parking.cpp  parking.h
parking/src/parking_lib/: parking_lib.cpp  parking_lib.h
parking/src/parking_lib_old/: parking_lib.cpp  parking_lib.h
sim_ackermann/: calc_max_speed.m  followpath.m  lqr.eps  lqr.fig  sim_acker.m  u.fig
simple_navigation_goals/: CMakeLists.txt  package.xml
simple_navigation_goals/include/: NoStateAvailableException.h  arbitrarystate.h  state.h  statemachine.h
simple_navigation_goals/src/: main.cpp
simple_navigation_goals/src/backup/: arbitrarystate.cpp  sampleprogram.cpp  state.cpp  statemachine.cpp
simple_navigation_goals/src/vettel/: Sector.cpp  Sector.h  helper.cpp  helper.h
simulation/ackermann_vehicle/ackermann_vehicle_description/urdf/: em_3905.urdf.xacro
simulation/ackermann_vehicle/ackermann_vehicle_gazebo/config/: em_3905_ackermann_ctrlr_params.yaml
simulation/ackermann_vehicle/ackermann_vehicle_gazebo/nodes/: ackermann_controller.py
simulation/cmd_vel_ackermann_bridge/: CMakeLists.txt  package.xml
simulation/cmd_vel_ackermann_bridge/include/cmd_vel_ackermann_bridge/: cmd_vel_ackermann_bridge.h
simulation/cmd_vel_ackermann_bridge/launch/: cmd_vel_ackermann_bridge.launch
simulation/cmd_vel_ackermann_bridge/src/: cmd_vel_ackermann_bridge.cpp
simulation/tas_simulator/: CMakeLists.txt  package.xml
simulation/tas_simulator/data/: plan  visualize_path.m
simulation/tas_simulator/launch/: joystick.launch  rviz.rviz  rviz_lqr.rviz  rvizekf.rviz  startNavigation.launch  startNavigation.launch~  startNavigation_rotation_wrong.launch  startSimulation.launch  start_all.launch  start_aux_ekf.launch
simulation/tas_simulator/worlds/: 3rdFloor.world
simulation/turtlebot_msgs/: CHANGELOG.rst  package.xml
simulation/turtlebot_teleop/launch/: keyboard_teleop.launch
tas/: CMakeLists.txt  package.xml
tas/doc/Latex/: LSR - TAS.aux  LSR - TAS.bal.gnuplot  LSR - TAS.bbl  LSR - TAS.blg  LSR - TAS.exp.gnuplot  LSR - TAS.out  LSR - TAS.tcp  LSR - TAS.tex  LSR - TAS.toc  LSR - TAS.todo  LSR - TAS.tps  LSR-TAS.tcp  bericht.aux  bericht.bbl  bericht.blg  bericht.lot  bericht.out  header.tex  literature.bib  makros.tex
tas/doc/Latex/chapters/: 0_frontpage.aux  0_frontpage.tex  1_overview.aux  1_overview.tex  2_tas_package.aux  2_tas_package.tex  3_advanced.aux  3_advanced.tex  4_setup.aux  4_setup.tex  advanced.aux  anhang.tex  beispielkapitel.aux  beispielkapitel.tex  detailed.aux  frontpage.aux  overview.aux  symbole.tex  tas_installation.tex  thema.aux  titelseite.aux  zusf.tex  Übersicht.odt
tas/doc/Latex/diagrams/: graphviz_example.gv
tas/launch/: frames.gv  hardware.launch  move_base.launch  move_base.launch~  odom.launch  odom.launch~  odom_amcl.launch  parking.launch  run_rviz.launch  run_system.launch
tas/launch/config/map_server/: LSR_3.pgm  LSR_3.yaml  hectormap.yaml  map.pgm  map_tas.yaml
tas/launch/config/map_server/static/: mapParkingLeft.pgm  mapParkingLeft_orig.pgm
tas/launch/config/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params.yaml~
tas/launch/config/rviz/: rviz_config.vcg  tas_rviz.rviz  tas_rviz_ownPath.rviz
tas/old/tas_odom/: CMakeLists.txt  package.xml
tas/old/tas_odom/src/: tas_odom.cpp
tas/shell_scripts/: 10-tas.rules  if  reset_system.sh  ros_setup.sh  rviz_ext  rviz_ext_client  switch_to_amcl_mode.sh  tas_rviz.rviz
tas_autonomous_control/: CMakeLists.txt  package.xml
tas_autonomous_control/src/: controller.launch  globalplan.txt  longitudinal_lateral_controller.cpp  tas_autonomous_control_node.cpp
tas_autonomous_control/src/control/: control.cpp  control.h  foo.cpp  foo.h  lqr.cpp  lqr.h
tas_odometry/: CMakeLists.txt  package.xml
tas_odometry/include/tas_odometry/: perfect_odometry.h
tas_odometry/launch/: encoder.launch  flow.launch
tas_odometry/msg/: Encoder.msg
tas_odometry/src/: imu_bias_compensation.cpp  motor_odometry.cpp  optflow_odometry.cpp  perfect_odometry.cpp
wii_control/: CMakeLists.txt  package.xml
wii_control/src/: main.cpp
wii_control/src/wii_lib/: wii_lib.cpp  wii_lib.h
