<?xml version="1.0"?>
<package>
  <name>tas_odometry</name>
  <version>0.0.1</version>
  <description>Provides nav_msgs/Odometry and TFs for TAS</description>
  <maintainer email="ros@laure.nz">Laurenz</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

</package>
